--- a/WebApi/Views/Admin/ChangePasswordForUser.cshtml
+++ b/WebApi/Views/Admin/ChangePasswordForUser.cshtml
@@ -38,5 +38,5 @@
         <input type="password" class="form-control" name="newPassword" required />
     </div>
     <button type="submit" class="btn btn-primary">Сменить пароль</button>
-    <a href="@Url.Action("Index", "Admin")" class="btn btn-secondary">Назад</a>
+    <a href="@Url.Action("Users", "Admin")" class="btn btn-secondary">Назад</a>
 </form>
