--- a/WebApi/Views/Shared/_MasterPage.cshtml
+++ b/WebApi/Views/Shared/_MasterPage.cshtml
@@ -87,12 +87,12 @@
         <a href="/Admin/Index">Главная</a>
         <a href="/Admin/Users">Пользователи</a>
         <a href="/Admin/Themes">Темы</a>
-        <a href="/Admin/CreateTest">Создать тест</a>
+        <a href="/Admin/CreateTest">Задания</a>
     </div>
     <div class="main">
+        
         <header>
             <h1>@title</h1>
-            <span>👤 Администратор</span>
         </header>
 
         <div class="content">
