update: приготовления к введению роли клиента

--- a/WebApi/Views/Admin/ChangePasswordForUser.cshtml
+++ b/WebApi/Views/Admin/ChangePasswordForUser.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApi.Infrastructure.Models.Storage.User
 @{
     ViewBag.Title = "Смена пароля";
-    Layout = "_MasterPage";
+    Layout = "_AdminLayout";
 }
 
 <h2>Информация о пользователе</h2>
