--- a/WebApi/Views/Admin/EditLesson.cshtml
+++ b/WebApi/Views/Admin/EditLesson.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Редактирование теоретического материала";
-    Layout = "_MasterPage";
+    Layout = "_AdminLayout";
 }
 
 <style>
