--- a/WebApi/Views/Admin/GetUser.cshtml
+++ b/WebApi/Views/Admin/GetUser.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Информация о пользователе";
-    Layout = "_MasterPage";
+    Layout = "_AdminLayout";
 }
 
 @if (Model == null)
