--- a/WebApi/Views/Admin/Index.cshtml
+++ b/WebApi/Views/Admin/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApi.Infrastructure.Models.Requests.ChangePasswordAdmin
 
 @{
-    Layout = "_MasterPage";
+    Layout = "_AdminLayout";
 }
 
 <!DOCTYPE html>
