--- a/WebApi/Views/AuthMvc/Login.cshtml
+++ b/WebApi/Views/AuthMvc/Login.cshtml
@@ -86,7 +86,7 @@
             <button type="submit">Войти</button>
         </form>
         <div class="links">
-            <a href="@Url.Action("Register", "Auth")">Регистрация</a>
+            <a href="@Url.Action("Register", "AuthMvc")">Регистрация</a>
         </div>
     </div>
 
