--- a/WebApi/Views/Admin/AddTask.cshtml
+++ b/WebApi/Views/Admin/AddTask.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApi.Infrastructure.Models.DTO.TaskDto
 @{
     ViewBag.Title = "Добавление задания";
-    Layout = "_MasterPage";
+    Layout = "_AdminLayout";
 }
 
 <style>
